# open-source-game-theory

./: .gitignore  CLAUDE.md  README.md  papers_on_simulations_in_gt.tex  references.bib
Open_source_game_theory/: Casper_talk.tex  learning_two_player_games_transparent_opponents.tex  mathematical_intro.tex  modal_logic.tex  recursive_joint_simulation_in_games.tex
app/: .env.example  README.md  bot_matrix_full.jsonl  bot_matrix_results.jsonl  pyproject.toml  results.json  results_test.json
app/src/pd_runner/: __init__.py  cli.py  config.py  logging_config.py  models.py
app/src/pd_runner/api/: __init__.py  jobs.py  main.py  pipeline_task.py  routes_matchups.py  routes_tournaments.py  schemas.py  serve.py
app/src/pd_runner/api/static/: index.html
app/src/pd_runner/eval/: harness.py  run_bot_matrix.py  run_bot_pipeline.py  run_bot_writer.py  run_pipeline.py
app/src/pd_runner/lean/: __init__.py  executor.py  generator.py  parser.py  templates.py
app/src/pd_runner/llm/: __init__.py  bot_synthesis.py  client.py  prompts.py  retrieval.py  tools.py
app/src/pd_runner/services/: bot_service.py  library_writer.py  matchup_service.py  proof_service.py  tournament_service.py
app/tests/: test_cli.py  test_config.py  test_executor.py  test_generator.py  test_matchup_service.py  test_parser.py  test_proof_pipeline.py  test_templates.py
code/: PrisonersDilemma.lean  README.md  lake-manifest.json  lakefile.toml
engine/: Outcome-Matrix.xlsx  PrisonersDilemma.lean  PrisonersDilemmaNew.lean  README.md  lake-manifest.json  lakefile.toml
latex/: .gitignore  cooperative_and_uncooperative_institution_designs.tex  (+8 more)
llm-distillation/: CLAUDE.md  pyproject.toml
llm-distillation/data/: payoff_matrix.csv
llm-distillation/src/distillation/: __init__.py  __main__.py  bot_descriptions.py  bots.py  cli.py  data.py  fitting.py  openrouter.py  pipeline.py  pipeline_cli.py  prompt.py  reporting.py
llm-distillation/tests/: test_data.py  test_fitting.py
(+134 files in other folders)
