[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-runner"
version = "0.1.0"
description = "Python orchestration layer for open-source game theory Lean proofs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
run-matchup = "pd_runner.cli:main"
pd-serve = "pd_runner.api.serve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
