[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "distillation"
version = "0.1.0"
description = "Fit a per-opponent cooperation profile to the convex hull of reference strategies."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
distillation = "distillation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
